--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   sqflite: ^2.2.8+4
   flutter_bloc: ^8.1.3
   shared_preferences: ^2.1.1
+  syncfusion_flutter_charts: ^21.2.10
 
 dev_dependencies:
   flutter_test:
